--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,7 @@ body {
   background-color: #daf8ff;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 a {
@@ -37,4 +36,8 @@ tr:nth-child(odd) {
 .table-title-min-width {
   display: inline-block;
   width: 100px;
+}
+
+.landing-header {
+  font-family: 'Courier New', Courier, monospace;
 }
