[refactor]:Change main backround color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,7 +43,7 @@ tr:nth-child(odd) {
 }
 
 .app-background-color {
-  background-color: #b07d62;
+  background-color: #e6e0dd;
 }
 
 .nav-background-color {
