--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  font-size: 16px;
 }
 
 * {
@@ -24,6 +25,20 @@ tr:nth-child(even) {
 }
 tr:nth-child(odd) {
   background: rgb(255, 255, 255);
+}
+
+h1 {
+  font-size: 32px;
+}
+h2 {
+  font-size: 26px;
+}
+
+h3 {
+  font-size: 22px;
+}
+p {
+  font-size: 16px;
 }
 
 .main-container {
@@ -43,13 +58,21 @@ tr:nth-child(odd) {
 }
 
 .app-background-color {
-  background-color: #e6e0dd;
+  background-color: #f8fdef;
 }
 
 .nav-background-color {
-  background-color: #5e503f;
+  background-color: #124559;
 }
 
 .text-color {
-  color: #a9927d;
+  color: #01161e;
+}
+
+.text-color-header-footer {
+  color: #f8fdef;
+}
+
+.card-bg-color {
+  background-color: #f3f3f3;
 }
